[gd_scene load_steps=15 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://button_normal_blue.tres" type="StyleBox" id=2]
[ext_resource path="res://Popup.gd" type="Script" id=3]
[ext_resource path="res://button_hover_blue.tres" type="StyleBox" id=4]
[ext_resource path="res://button_pressed_blue.tres" type="StyleBox" id=5]
[ext_resource path="res://images/perceptron_logo.png" type="Texture" id=6]
[ext_resource path="res://fonts/Exo_2/static/Exo2-Light.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://Title_Lable.tscn" type="PackedScene" id=9]
[ext_resource path="res://fonts/Exo_2/static/Exo2-ExtraBold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://roundcorner.gdshader" type="Shader" id=11]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 11 )
shader_param/corner_radius = 60.0

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 7 )

[node name="Popup" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_top = 320.0
margin_right = -90.0
margin_bottom = -500.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 500.0
margin_bottom = 420.0

[node name="Image" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
material = SubResource( 3 )
margin_right = 500.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Title" parent="MarginContainer/VBoxContainer" instance=ExtResource( 9 )]
unique_name_in_owner = true
margin_top = 145.0
margin_right = 500.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
text = "Welcome Back!"

[node name="Message" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 261.0
margin_right = 500.0
margin_bottom = 299.0
size_flags_vertical = 6
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 355.0
margin_right = 500.0
margin_bottom = 420.0
custom_constants/separation = 20

[node name="NoThanks" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
unique_name_in_owner = true
visible = false
margin_top = 0.0
margin_right = 240.0
margin_bottom = 65.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "No Thanks"

[node name="OK" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
unique_name_in_owner = true
margin_top = 0.0
margin_right = 500.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "OK"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NoThanks" to="." method="_on_NoThanks_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OK" to="." method="_on_OK_pressed"]
